--- a/README.org
+++ b/README.org
@@ -12,3 +12,11 @@
      $ cd ~
      $ git clone git://github.com/deftsp/.emacs.d.git
    #+END_EXAMPLE
+** Credits
+   In general, this config is a combination of lots of sources, including:
+   [[http://www.emacswiki.org/][EmacsWiki]]
+   [[http://www.emacswiki.org][What the .emacs.d!?]]
+   [[http://ergoemacs.org/emacs/emacs.html][Xah Emacs Tutorial]]
+   [[http://sachachua.com/blog/][sacha chua]]
+
+   To be continued ...
